--- a/app/templates/base.django.html
+++ b/app/templates/base.django.html
@@ -4,13 +4,23 @@
 <html lang="en">
 <head>
     <title>{% block title %} Home {% endblock title %}</title>
-    <!-- Meta -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Basic Meta Tags -->
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">    
-    <link rel="shortcut icon" href="favicon.ico">  
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- Page Title & Description -->
+    <title>QuickRun Documentation</title>
+    <meta name="description" content="Documentation for quickly start a Django project.">
+
+    <!-- Open Graph / Facebook Meta -->
+    <meta property="og:title" content="QuickRun Documentation">
+    <meta property="og:description" content="A step-by-step documentation for developers who are looking for some basic commands to create a Django project.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://khroot2.pythonanywhere.com ">
+    <meta property="og:image" content="https://khroot2.pythonanywhere.com/static/images/preview.jpg ">
+    <meta property="og:site_name" content="QuickRun">
+    <link rel="shortcut icon" href="{% static 'assets/favicon.ico' %}">  
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <!-- FontAwesome JS -->
     <script defer src="{% static 'fontawesome/js/all.js' %}"></script>
